<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_2" />

    <TextView
        android:id="@+id/login_page_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/activity_login_page_textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login_page" />

    <!-- email_input_text_linear_layout -->

    <LinearLayout
        android:id="@+id/email_input_text_linear_layout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_textView">

        <ImageView
            android:id="@+id/image_email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_alternate_email_24" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_text"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:hint="@string/activity_login_email_inputtext_hint" />
    </LinearLayout>

    <!-- password_input_text_linear_layout -->

    <LinearLayout
        android:id="@+id/password_input_text_linear_layout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_text_linear_layout">

        <ImageView
            android:id="@+id/image_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_password_24" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_text"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:hint="@string/activity_login_password_inputtext_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_text_linear_layout">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:width="200dp"
            android:text="@string/activity_login_btn" />

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/activity_login_register_textBtn"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>